[package]
name = "online_crab"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-ws = "0.3.1"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
futures-util = "0.3"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }